프로젝트 설정 및 스타일링 설정 (README 참조)

--- a/next-bnb/package.json
+++ b/next-bnb/package.json
@@ -4,5 +4,23 @@
   "main": "index.js",
   "repository": "https://github.com/yoonhyochang/nextbnbcloncoding.git",
   "author": "gptus <yhc9308@naver.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.8"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "@types/styled-components": "^5.1.28",
+    "typescript": "^5.2.2"
+  }
 }
