--- a/next-bnb/package.json
+++ b/next-bnb/package.json
@@ -15,7 +15,8 @@
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "styled-reset": "^4.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.25",
