--- a/next-bnb/package.json
+++ b/next-bnb/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
+    "bcryptjs": "^2.4.3",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "styled-reset": "^4.5.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "@types/styled-components": "^5.1.28",
