--- a/next-bnb/package.json
+++ b/next-bnb/package.json
@@ -11,8 +11,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
