회원가입과 로그인 8(회원가입 api) access_token 생성하기 오류 발생

--- a/next-bnb/package.json
+++ b/next-bnb/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.3",
+    "axios": "^1.5.1",
     "babel-plugin-styled-components": "^2.1.4",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
